fixed login modal failure alignment issues. Fixes #74

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -277,6 +277,10 @@ a:hover {
 	letter-spacing: 1px;
 }
 
+.login-content {
+	width: 100%;
+}
+
 .trpProfileForm {
 	display: block;
 }
